# Arcade

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
.github/workflows/: workflow.yml
assets/irrlicht/: font.xml
doc/: CORE.md  PACMAN.md  SNAKE.md
include/core/: core.hpp
include/core/overlays/: debugOverlay.hpp  leaderboardOverlay.hpp
include/core/playerContainer/: playerContainer.hpp
include/game/pacman/: pacman.hpp
include/game/snake/: snake.hpp
include/graphics/: IGraphic.hpp
include/graphics/Ncurses/: Ncurses.hpp
include/graphics/SDL2/: SDL2.hpp
include/graphics/SFML/: SfmlGraphic.hpp
include/graphics/ncurses/: Ncurses.hpp
include/menu/: menu.hpp  selectMenu.hpp  userInputMenu.hpp
include/tools/: grid.hpp
lib/libarcade/: Arcade.hpp  Makefile  README.org
lib/libarcade/Arcade/: display.hpp  game.hpp  utils.hpp
lib/libarcade/Arcade/utils/: colors.hpp  constants.hpp  events.hpp  player.hpp  shapes.hpp  text.hpp  types.hpp
lib/libarcade/docs/: coordinates.org
lib/libarcade/include/graphics/SDL2/: SDL2.hpp
lib/libarcade/include/graphics/ncurses/: Ncurses.hpp
libarcade-prefix/src/libarcade-stamp/: libarcade-gitinfo.txt  libarcade-update-info.txt
libarcade-prefix/tmp/: libarcade-gitclone.cmake  libarcade-mkdirs.cmake
saves/: player_scores.arc
src/: main.cpp
src/core/: core.cpp  game_loop.cpp  load_libraries.cpp
src/core/overlays/: debugOverlay.cpp  leaderboardOverlay.cpp
src/core/playerContainer/: playerContainer.cpp
src/game/pacman/: pacman.cpp
src/game/snake/: Snake.cpp
src/games/snake/: snake.hpp
src/graphics/: KeySwitch.cpp  main.cpp
src/graphics/SDL2/: SDL2.cpp  SDL2KeySwitch.cpp
src/graphics/SFML/: SfmlGraphic.cpp  SfmlKeySwitch.cpp
src/graphics/ncurses/: KeySwitch.cpp  Ncurses.cpp  NcursesKeySwitch.cpp
src/menu/: Menu.cpp  SelectMenu.cpp  UserInputMenu.cpp  UsernameSelection.cpp  setupMenu.cpp
src/tools/: grid.cpp
tests/: test_parsing.cpp  test_parsing_2.cpp  test_parsing_4.cpp  test_parsing_5.cpp
tests/parsing/: test_parsing_1.cpp  test_parsing_3.cpp
